--- a/jasper_library/platforms/zcu208.yaml
+++ b/jasper_library/platforms/zcu208.yaml
@@ -32,6 +32,19 @@ rfdc:
     has_adc_clk: False
     adc_clk_src: 2
 
+  tile228:
+    has_dac_clk: False
+    dac_clk_src: 6
+  tile229:
+    has_dac_clk: True
+    dac_clk_src: 6
+  tile230:
+    has_dac_clk: False
+    dac_clk_src: 6
+  tile231:
+    has_dac_clk: False
+    dac_clk_src: 6
+    
 onehundredgbe:
   refclk_freq_str: "156.25"
   include_rs_fec: 1
@@ -114,10 +127,10 @@ pins:
 
 # 100 GbE
   # IDT 8A34001 output Q7, refclk1 GTY bank 129
-  mgt_ref_clk_p:
+  qsfp_mgt_ref_clk_p:
     loc:
       - V31
-  mgt_ref_clk_n:
+  qsfp_mgt_ref_clk_n:
     loc:
       - V32
   qsfp_mgt_tx_p:
