--- a/jasper_library/platforms/zcu208.yaml
+++ b/jasper_library/platforms/zcu208.yaml
@@ -1,6 +1,6 @@
 name: zcu208
 manufacturer: Xilinx
-fpga: xczu48dr-fsvg1517-2-e-es1
+fpga: xczu48dr-fsvg1517-2-e
 family: rfsoc
 config_voltage: 1.8
 cfgbvs: GND
@@ -73,13 +73,13 @@ pins:
     loc: AU3
   clk_125_p:
     iostd: LVDS_25
-    loc: A13
+    loc: C8
   clk_125_n:
     iostd: LVDS_25
     loc: C7
   sync_in:
     iostd: LVCMOS18
-    loc: C8
+    loc: AU2
 
 # NOTE: most of the IO constraints and clocking constraints are taken care of by
 # the RFDC IP itself. Vivado has that baked into the output products of teh IP
